--- a/index.html
+++ b/index.html
@@ -1,14 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
 
-    <script src="script.js"></script>
-    
-</body>
+    <title>Number guessing game</title>
+
+    <style>
+      html {
+        font-family: sans-serif;
+      }
+
+      body {
+        width: 50%;
+        max-width: 800px;
+        min-width: 480px;
+        margin: 0 auto;
+      }
+      
+      .form input[type="number"] {
+        width: 200px;
+      }
+
+      .lastResult {
+        color: white;
+        padding: 3px;
+      }
+    </style>
+  </head>
+
+  <body>
+    <h1>Number guessing game</h1>
+
+    <p>We have selected a random number between 1 and 100. See if you can guess it in 10 turns or fewer. We'll tell you if your guess was too high or too low.</p>
+
+    <div class="form">
+      <label for="campoPalpite">Enter a guess: </label>
+      <input type="number" min="1" max="100" required id="campoPalpite" class="campoPalpite">
+      <input type="submit" value="Enviar Palpite" class="envioPalpite">
+    </div>
+
+    <div class="resultParas">
+      <p class="palpites"></p>
+      <p class="ultimoResultado"></p>
+      <p class="baixoOuAlto"></p>
+    </div>
+
+    <script>
+
+        var numeroAleatorio = Math.floor(Math.random() * 100) + 1;
+        var palpites = document.querySelector(".palpites");
+        var ultimoResultado = document.querySelector(".ultimoResultado");
+        var baixoOuAlto = document.querySelector(".baixoOuAlto");
+        var envioPalpite = document.querySelector(".envioPalpite");
+        var campoPalpite = document.querySelector(".campPalpite");
+        var contagemPalpites = 1;
+        var botaoReinicio;
+
+        function conferirPalpite() {
+            alert("Eu sou um placeholder");
+        }
+
+    </script>
+  </body>
 </html>
